--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,25 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="home_item">Accueil</string>
-    <string name="stats_item">Statistiques</string>
     <string name="inventory">Inventaire</string>
     <string name="spells_item">Sorts</string>
     <string name="capacities_item">Capacités</string>
+    <string name="characterNameLabel">nom personnage</string>
+    <string name="raceLabel">race</string>
+    <string name="rpgClassLabel">classe</string>
+    <string name="levelLabel">niveau</string>
+    <string name="xpLabel">experience</string>
+    <string name="hpLabel">PV</string>
+    <string name="rupeesLabel">rubis</string>
+    <string name="destinyForceLabel">force</string>
+    <string name="destinyWisdomLabel">sagesse</string>
+    <string name="destinyCourageLabel">courage</string>
+    <string name="destinyPointsTitle">Points de destin</string>
+    <string name="statsTitle">Statistiques</string>
+    <string name="forceStatLabel">force</string>
+    <string name="constitutionStatLabel">constitution</string>
+    <string name="wisdomStatLabel">sagesse</string>
+    <string name="charismaStatLabel">charisme</string>
+    <string name="intelligenceStatLabel">intelligence</string>
+    <string name="dexterityStatLabel">dextérité</string>
 </resources>
