--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="raceLabel">race</string>
     <string name="rpgClassLabel">classe</string>
     <string name="levelLabel">niveau</string>
-    <string name="xpLabel">experience</string>
+    <string name="xpLabel">expérience</string>
     <string name="hpLabel">PV</string>
     <string name="rupeesLabel">rubis</string>
     <string name="destinyForceLabel">force</string>
