--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="charismaStatLabel">charisme</string>
     <string name="intelligenceStatLabel">intelligence</string>
     <string name="dexterityStatLabel">dextérité</string>
+    <string name="saveButton">sauvegarder</string>
 </resources>
